--- a/elections.tex
+++ b/elections.tex
@@ -22,7 +22,7 @@ where each $\succ_i, 1 \leq i \leq n$, represents the preference order of the $i
 
 \begin{exmp}
 For a candidate set $C = \{a, b, c, d\}$,
-let us consider a preference profile $P = (\succ_1, \succ_2, \succ_3)$ with
+let us consider a preference profile $P = (\succ_1, \succ_2, \succ_3)$ with:
 \begin{align*}
 a \succ_1 b \succ_1 c \succ_1 d, \\
 b \succ_2 d \succ_2 c \succ_2 a,	\\
