--- a/bib.bib
+++ b/bib.bib
@@ -69,7 +69,7 @@
    journal  = "Social Choice and Welfare",
 }
 
-@article{usingcomp3,
+@article{controlbyadding,
    author   = "John Bartholdi and Craig Tovey and Michael Trick",
    title    = "How hard is it to control an election?",
    year     = "1992",
@@ -129,4 +129,16 @@
     author = "David Galvin",
     title = "Erdős's proof of Bertrand's postulate",
     year = "2006",
+}
+
+@article{paxos,
+	author = "Leslie Lamport",
+	title  = "Paxos Made Simple",
+	year   = "2001",
+}
+
+@article{strategiccandidacy,
+	author = "Bhaskar Dutta and Matthew Jackson and Michel Le Breton",
+	title  = "Strategic Candidacy and Voting Procedures",
+	year   = "1998",
 }
