--- a/introduction.tex
+++ b/introduction.tex
@@ -1,7 +1,10 @@
-Elections is a situation when a set of voters collaboratively chooses one or many winners from multiple candidates.
-It is an established way of aggregating opinions into a single global decision.
+Holding an election is a situation where a set of voters collaboratively chooses
+one or many winners among multiple candidates.
+It is an established way of aggregating opinions of multiple agents into a single global decision.
 Group decision making is crucial in contemporary societies.
-It may be used also to reach consensus in distributed computer systems.
+It is used in both formal election systems, such as parliamentary elections,
+and also in informal casual situation, such as deciding on the date of meeting that suits most interested people.
+It may be used also to reach consensus in distributed computer systems, e.g. as in the Paxos algorithm \cite{paxos}.
 
 \section{Attacking Elections with Clones}
 
@@ -14,7 +17,9 @@ When it comes to the election, confused supporters of $A$ do not know who they s
 Their votes end up split between $A$ and $C$.
 Candidate $B$ wins the elections and becomes the president.
 
-This is a particular case of an attack known as \textit{strategic candidacy} or \textit{control by adding candidates}, %TODO: citation
+This is a particular case of an attack known as \textit{strategic candidacy},
+studied by Dutta et al. \cite{strategiccandidacy},
+or \textit{control by adding candidates}, studied by Bartholdi et al. \cite{controlbyadding},
 depending on the person performing the attack.
 We are interested in the variant where the new candidates are very similar to some of the existing ones.
 So similar, that they are indistinguishable or hardly distinguishable for voters.
@@ -25,24 +30,26 @@ We aim to figure out whether such an attack took place, or, at least, likely too
 Given voters preferences, regardless of the election system used, we want to detect latent clone structures.
 We are interested in computational complexity of detection problems.
 We treat easily-computable detection as an argument that it is easy to defend against clone-based attacks.
-On the other hand, hard to compute detection means that such attacks are serious threat.
+On the other hand, hard-to-compute detection means that such attacks are serious threat.
 
-\section{Related Works}
+\section{Related Work}
 
-Elections are well-studied research area.
-Book \cite{handbook} presents general overview of voting.
+The theory of elections is a well-studied research area.
+Arrow \cite{handbook} presents general overview of voting.
 %TODO: election systems
-Computational approach to elections has been studied in \cite{compsocialchoice}.
+Computational approach to elections has been described in the work of
+Brandt, Conitzer and Endriss \cite{compsocialchoice}.
 %TODO: attacks on elections
 Work \cite{usingcomplexity} discusses defending against attacks using computational complexty:
 making the attack computationally prohibitive.
 More background on computational-complexity approach to elections
-can be found in papers \cite{usingcomp1}, \cite{usingcomp2}, and \cite{usingcomp3}.
+can be found in papers \cite{usingcomp1}, \cite{usingcomp2}, and \cite{controlbyadding}.
 
-Structures of groups of simillar candidates has been studied for instance in \cite{clones1}, \cite{clones2}, and \cite{clones3}.
+Structures of groups of simillar candidates have been studied for instance in
+\cite{clones1}, \cite{clones2}, and \cite{clones3}.
 Work \cite{independenceofclones} discusses an attack on elections where new candidates,
-clones, very similar to existing ones, are introduced to change the outcome of elections.
-Algorithm for cloning for many voting rules are studied in \cite{cloninginelections}.
+very similar to existing ones, clones, are introduced to change the outcome of an election.
+Algorithms for cloning for various voting rules are studied in \cite{cloninginelections}.
 Paper \cite{clonestructures} gives properties of clone structures regardless of voting rule.
 
 
@@ -51,10 +58,10 @@ Paper \cite{clonestructures} gives properties of clone structures regardless of 
 This thesis has the following structure.
 In Chapter 2 we briefly present concepts from computer science
 and mathematics that form the basis of our arguments.
-In Chapter 3 we include formal definitions of elections, introduce the decloning problem
+In Chapter 3 we include formal definitions of elections, introduce the \textsc{Decloning} problem
 and show a polynomial-time algorithm for it.
 Chapter 4 contains study of imperfect clone structures.
 It discusses error functions for clone set families and the optimal non-perfect decloning problems.
-For a sample error function we prove that optimal decloning is \np-complete.
+For a sample natural error function we prove that optimal decloning is \np-complete.
 Finally, Chapter 5 summarizes our results, discusses real-life consequences,
 and indicates opportunities for further research.
