--- a/elections.tex
+++ b/elections.tex
@@ -20,7 +20,7 @@ is a sequence of $n$ preference orders over $C$,
 where each $\succ_i, 1 \leq i \leq n$, represents the preference order of the $i$-th voter.
 \end{defn}
 
-\begin{exmp}
+\begin{exmp} \label{example-election}
 For a candidate set $C = \{a, b, c, d\}$,
 let us consider a preference profile $P = (\succ_1, \succ_2, \succ_3)$ with:
 \begin{align*}
@@ -31,7 +31,7 @@ a \succ_3 b \succ_3 d \succ_3 c.
 $P$ is a preference profile over $C$.
 \end{exmp}
 
-This is where our interests in elections for this work end.
+These were the notions necessary for our work in the following sections.
 However, for completeness, we will discuss what is election system and give some examples.
 
 \begin{defn}[election]
@@ -39,24 +39,42 @@ Election is a pair $(C, P)$, where $C$ is a candidate set, and $P$ is a preferen
 \end{defn}
 
 \begin{defn}[election system]
-Election system is a function $R : (C,P) \rightarrow 2^{C} \setminus \{\emptyset\}$
-that maps election to non-empty set of winners.
+Election system is a function that maps election to non-empty set of winners.
 \end{defn}
 
-\begin{exmp}[Plurality]
+Let us introduce now some examples of election systems.
+
 Plurality is an election system that for given election chooses winners as the candidates
 with the highest number of voters who ranked them on the first position.
-\end{exmp}
 
-\begin{exmp}[Borda]
+Veto is an election system where winners are candidates with
+the lowest number of voters who ranked them on the last position.
+
 Borda is an elections system in which each voter gives its $i$-th candidate score $i$.
 Winners are candidates with lowest scores.
-\end{exmp}
 
-\begin{exmp}[Copeland]
-We say for given candidate that a pairwise victory is a situation
-when majority of voters prefer that candidate from the other one.
+Given two candidates we say that a pairwise victory of one of them
+is a situation when a majority of voters prefer that candidate from the other one.
 The opposite situation is a pairwise defeat.
+
 Copeland is an election system in which winners are those candidates that have
 highest number of pairwise victories minus number of pairwise defeats.
-\end{exmp}
+
+\begin{table}[h] \centering
+\begin{tabular}{| l | l | l | l | l | l |} \hline
+    election system	& $a$'s value	& $b$'s value	& $c$'s value	& $d$'s value	& winners \\ \hline
+	Plurality 		& 2				& 1				& 0				& 0				& $a$ \\ \hline
+	Veto			& 1				& 0				& 1				& 1				& $b$ \\ \hline
+	Borda	 		& 6				& 4				& 10			& 9				& $b$ \\ \hline
+	Copeland		& 3				& 1				& -3			& -1			& $a$ \\ \hline
+\end{tabular}
+\caption{Computation of winners of election from Example \ref{example-election}.
+Value means number of voters ranking given candidate on the first position for the Plurality case,
+number of voters ranking candidate on the last position for Veto,
+score for Borda,
+and number of pairwise victories minus number of pairwise defeats for Copeland election system.} \label{example-winners}
+\end{table}
+
+Table \ref{example-winners} shows winners of election from Example \ref{example-election}
+computed using different election systems.
+
