--- a/introduction.tex
+++ b/introduction.tex
@@ -3,7 +3,7 @@ one or many winners among multiple candidates.
 It is an established way of aggregating opinions of multiple agents into a single global decision.
 Group decision making is crucial in contemporary societies.
 It is used in both formal election systems, such as parliamentary elections,
-and also in informal casual situation, such as deciding on the date of meeting that suits most interested people.
+and also in informal casual situation, such as deciding on the date of meeting that suits most interested parties.
 It may be used also to reach consensus in distributed computer systems, e.g. as in the Paxos algorithm \cite{paxos}.
 
 \section{Attacking Elections with Clones}
@@ -24,33 +24,57 @@ depending on the person performing the attack.
 We are interested in the variant where the new candidates are very similar to some of the existing ones.
 So similar, that they are indistinguishable or hardly distinguishable for voters.
 We call such candidates clones.
+Clones can be deliberately introduced to elections to alter its outcome.
 
-Our goal in this work is to conceive methods of defending against such clone-based attacks.
+Our goal in this work is to assess how dangerous are such clone-based attacks.
 We aim to figure out whether such an attack took place, or, at least, likely took place.
 Given voters preferences, regardless of the election system used, we want to detect latent clone structures.
-We are interested in computational complexity of detection problems.
+In this work we study computational complexity of detection problems.
 We treat easily-computable detection as an argument that it is easy to defend against clone-based attacks.
-On the other hand, hard-to-compute detection means that such attacks are serious threat.
+On the other hand, hard-to-compute detection means that such attacks are a serious threat.
 
 \section{Related Work}
 
 The theory of elections is a well-studied research area.
-Arrow \cite{handbook} presents general overview of voting.
-%TODO: election systems
-Computational approach to elections has been described in the work of
-Brandt, Conitzer and Endriss \cite{compsocialchoice}.
-%TODO: attacks on elections
-Work \cite{usingcomplexity} discusses defending against attacks using computational complexty:
-making the attack computationally prohibitive.
-More background on computational-complexity approach to elections
-can be found in papers \cite{usingcomp1}, \cite{usingcomp2}, and \cite{controlbyadding}.
+Arrow et al. \cite{handbook} presents general overview of the social choice theory.
+It describes, among others, Arrow's Impossibility Theorem.
+It states that no election system can simultaneously satisfy a set of specific fairness criteria.
 
-Structures of groups of simillar candidates have been studied for instance in
-\cite{clones1}, \cite{clones2}, and \cite{clones3}.
-Work \cite{independenceofclones} discusses an attack on elections where new candidates,
+Computational approach to elections has been described in the work of
+Brandt et al. \cite{compsocialchoice}.
+It is viewing the social choice theory from the algorithmic perspective.
+It studies the problem of strategic manipulation
+and circumventing impossibilities pointed by the Gibbard–Satterthwaite theorem.
+It states that a voting rule that is deterministic and not dictatorial is susceptible to tactical voting
+-- situation when a voter can vote not accordingly to his sincere preference in order to prevent an undesirable outcome.
+
+%TODO: attacks on elections
+Faliszewski et al. \cite{usingcomplexity} discusses defending against attacks using computational complexty:
+making the attack computationally prohibitive.
+For some election systems it was proven that the algorithms of seeking the attack on the elections are \np-hard.
+The work studied also dichotomy theorems for elections systems to be computationally resistant to attacks.
+
+More background on computational-complexity approach to elections in the work of Bartholdi and Orlin \cite{usingcomp1}.
+They studied computational resilience to attacks of the Single Transferable Vote election system.
+They showed that the problem of finding a preference that makes given candidate win the election is \np-complete.
+Another work of Bartholdi et al. \cite{usingcomp2} shows an election system,
+where computing winners can be done efficiently, but strategic manipulation is computationally prohibitive.
+
+Bartholdi et al. \cite{controlbyadding} studied the computational complexity of altering the election
+outcome by introducing new candidates.
+This is the situation we deal with when elections are attacked by introducing clones.
+
+Structures of groups of simillar candidates have been studied for instance by
+Laffond et al. \cite{clones1}, and Laslier \cite{clones2, clones3}.
+Tideman \cite{independenceofclones} discusses an attack on elections where new candidates,
 very similar to existing ones, clones, are introduced to change the outcome of an election.
-Algorithms for cloning for various voting rules are studied in \cite{cloninginelections}.
-Paper \cite{clonestructures} gives properties of clone structures regardless of voting rule.
+He formulates a condition that makes voting rules resilient to such attacks.
+
+Algorithms for cloning for various voting rules are studied by Elking et al. \cite{cloninginelections}.
+They characterize the preference profiles for which exists successful attack by cloning.
+They study the problem of finding minimum-cost attack for a model with weighted cost of producing each clone.
+
+Elkind et al. \cite{clonestructures} also give properties of clone structures regardless of voting rule.
 
 
 \section{Structure of the Thesis}
