--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -28,6 +28,8 @@
 
 \usepackage{xspace}
 
+\usepackage{graphicx}
+
 \makeatletter
 % \def\@endtheorem{\endtrivlist\@endpefalse }% OLD
 \def\@endtheorem{\endtrivlist}% NEW
