--- a/introduction.tex
+++ b/introduction.tex
@@ -15,7 +15,7 @@ However, he exploits the fact that $A$ has a twin brother $C$.
 He manages to persuade the twin brother to take part in the election.
 When it comes to the election, confused supporters of $A$ do not know who they should vote for.
 Their votes end up split between $A$ and $C$.
-Candidate $B$ wins the elections and becomes the president.
+Candidate $B$ wins the election and becomes the president.
 
 This is a particular case of an attack known as \textit{strategic candidacy},
 studied by Dutta et al. \cite{strategiccandidacy},
@@ -24,7 +24,7 @@ depending on the person performing the attack.
 We are interested in the variant where the new candidates are very similar to some of the existing ones.
 So similar, that they are indistinguishable or hardly distinguishable for voters.
 We call such candidates clones.
-Clones can be deliberately introduced to elections to alter its outcome.
+Clones can be deliberately introduced to election to alter its outcome.
 
 Our goal in this work is to assess how dangerous are such clone-based attacks.
 We aim to figure out whether such an attack took place, or, at least, likely took place.
@@ -42,19 +42,19 @@ It states that no election system can simultaneously satisfy a set of specific f
 
 Computational approach to elections has been described in the work of
 Brandt et al. \cite{compsocialchoice}.
-It is viewing the social choice theory from the algorithmic perspective.
+They view the social choice theory from the algorithmic perspective.
 It studies the problem of strategic manipulation
-and circumventing impossibilities pointed by the Gibbard–Satterthwaite theorem.
-It states that a voting rule that is deterministic and not dictatorial is susceptible to tactical voting
+and circumventing impossibilities pointed by the Gibbard–Satterthwaite Theorem.
+The theorem states that a voting rule that is deterministic and not dictatorial is susceptible to tactical voting
 -- situation when a voter can vote not accordingly to his sincere preference in order to prevent an undesirable outcome.
 
-%TODO: attacks on elections
-Faliszewski et al. \cite{usingcomplexity} discusses defending against attacks using computational complexty:
+Faliszewski et al. \cite{usingcomplexity} discuss defending against attacks on elections using computational complexity:
 making the attack computationally prohibitive.
 For some election systems it was proven that the algorithms of seeking the attack on the elections are \np-hard.
 The work studied also dichotomy theorems for elections systems to be computationally resistant to attacks.
 
-More background on computational-complexity approach to elections in the work of Bartholdi and Orlin \cite{usingcomp1}.
+More background on computational-complexity approach to elections can be found
+in the work of Bartholdi and Orlin \cite{usingcomp1}.
 They studied computational resilience to attacks of the Single Transferable Vote election system.
 They showed that the problem of finding a preference that makes given candidate win the election is \np-complete.
 Another work of Bartholdi et al. \cite{usingcomp2} shows an election system,
@@ -72,9 +72,9 @@ He formulates a condition that makes voting rules resilient to such attacks.
 
 Algorithms for cloning for various voting rules are studied by Elking et al. \cite{cloninginelections}.
 They characterize the preference profiles for which exists successful attack by cloning.
-They study the problem of finding minimum-cost attack for a model with weighted cost of producing each clone.
+They also study the problem of finding minimum-cost attack for a model with weighted cost of producing each clone.
 
-Elkind et al. \cite{clonestructures} also give properties of clone structures regardless of voting rule.
+Elkind et al. \cite{clonestructures} give properties of clone structures, regardless of the voting rule.
 
 
 \section{Structure of the Thesis}
